Adicionado Funcionalidade de Registrar Produtos

--- a/nojo´s/src/main/webapp/index.html
+++ b/nojo´s/src/main/webapp/index.html
@@ -1,16 +1,21 @@
 <html>
 <body>
-<h2>Creat Car</h2>
-<form action="/create-car" method="post">
+<h2>Criar Produto</h2>
+<form action="/create-prod" method="post">
 
-    <label for="car-name" >Car name :</label>
+    <label for="prod-desc" >Descrição do Produto :</label>
 
-    <input type="text" name="car-name" id="car-name">
+    <input type="text" name="prod-desc" id="prod-desc">
 
-    <label for="car-color" >Car color :</label>
+    <label for="prod-marca" >Marca do Produto :</label>
 
-    <input type="text" name="car-color" id="car-color">
-    <button type="submit">Register</button>
+    <input type="text" name="prod-marca" id="prod-marca">
+
+    <label for="prod-valor" > R$ :</label>
+
+    <input type="text" name="prod-valor" id="prod-valor">
+
+    <button type="submit">Registrar</button>
 
 
      </form>
