--- a/nojo´s/src/main/webapp/index.html
+++ b/nojo´s/src/main/webapp/index.html
@@ -1,23 +1,98 @@
-<html>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Criar Produto</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        body {
+            background-color: #000000; /* Fundo preto */
+            color: #f8f9fa; /* Texto claro */
+            font-family: Geneva, sans-serif; /* Fonte Geneva */
+        }
+        .form-container {
+            background-color: #212529; /* Fundo escuro para o formulário */
+            padding: 20px;
+            border-radius: 10px;
+            margin-top: 50px;
+            max-width: 500px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        .form-label {
+            color: #f8f9fa; /* Cor das labels */
+        }
+        .title {
+            font-size: 3rem; /* Aumenta o tamanho da fonte do título */
+            text-align: center; /* Mantém o texto centralizado */
+            margin-top: 20px;
+            color: #f8f9fa;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* Sombra do texto para maior visibilidade */
+        }
+        .link_wrapper {
+            display: inline-block;
+            position: relative;
+            padding: 10px 20px;
+            text-decoration: none;
+            color: #f8f9fa;
+            background-color: #ff6f00; /* Laranja */
+            border-radius: 5px;
+            transition: background-color 0.3s, transform 0.3s;
+            margin-top: 20px;
+            border: none;
+        }
+        .link_wrapper:hover {
+            background-color: #e65100; /* Laranja mais escuro */
+            transform: scale(1.05);
+        }
+        .icon {
+            display: inline-block;
+            margin-left: 10px;
+            vertical-align: middle;
+        }
+        .icon svg {
+            fill: #f8f9fa; /* Cor do ícone em branco */
+            width: 20px;
+            height: 20px;
+            transition: transform 0.3s;
+        }
+        .link_wrapper:hover .icon svg {
+            transform: translateX(5px);
+        }
+    </style>
+</head>
 <body>
-<h2>Criar Produto</h2>
-<form action="/create-prod" method="post">
+<div class="container">
+    <h2 class="title">Criar Produto</h2> <!-- Título atualizado -->
+    <div class="form-container">
+        <form action="/create-prod" method="post">
+            <div class="form-group">
+                <label for="prod-desc" class="form-label">Descrição do Produto:</label>
+                <input type="text" name="prod-desc" id="prod-desc" class="form-control" required>
+            </div>
+            <div class="form-group">
+                <label for="prod-marca" class="form-label">Marca do Produto:</label>
+                <input type="text" name="prod-marca" id="prod-marca" class="form-control" required>
+            </div>
+            <div class="form-group">
+                <label for="prod-valor" class="form-label">Valor R$:</label>
+                <input type="number" name="prod-valor" step="0.01" required id="prod-valor" class="form-control">
+            </div>
+            <button type="submit" class="link_wrapper">
+                Registrar
+                <div class="icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 268.832 268.832">
+                        <path d="M265.17 125.577l-80-80c-4.88-4.88-12.796-4.88-17.677 0-4.882 4.882-4.882 12.796 0 17.678l58.66 58.66H12.5c-6.903 0-12.5 5.598-12.5 12.5 0 6.903 5.597 12.5 12.5 12.5h213.654l-58.66 58.662c-4.88 4.882-4.88 12.796 0 17.678 2.44 2.44 5.64 3.66 8.84 3.66s6.398-1.22 8.84-3.66l79.997-80c4.883-4.882 4.883-12.796 0-17.678z"/>
+                    </svg>
+                </div>
+            </button>
+        </form>
+    </div>
+</div>
 
-    <label for="prod-desc" >Descrição do Produto :</label>
-
-    <input type="text" name="prod-desc" id="prod-desc">
-
-    <label for="prod-marca" >Marca do Produto :</label>
-
-    <input type="text" name="prod-marca" id="prod-marca">
-
-    <label for="prod-valor" > R$ :</label>
-
-    <input type="text" name="prod-valor" id="prod-valor">
-
-    <button type="submit">Registrar</button>
-
-
-     </form>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
