alteração letras index html

--- a/nojo´s/src/main/webapp/index.html
+++ b/nojo´s/src/main/webapp/index.html
@@ -10,6 +10,9 @@
             background-color: #000000; /* Fundo preto */
             color: #f8f9fa; /* Texto claro */
             font-family: Geneva, sans-serif; /* Fonte Geneva */
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+            text-rendering: optimizeLegibility;
         }
         .form-container {
             background-color: #212529; /* Fundo escuro para o formulário */
@@ -22,6 +25,7 @@
         }
         .form-label {
             color: #f8f9fa; /* Cor das labels */
+            font-weight: 300; /* Texto mais leve para melhor qualidade */
         }
         .title {
             font-size: 3rem; /* Aumenta o tamanho da fonte do título */
@@ -29,6 +33,10 @@
             margin-top: 20px;
             color: #f8f9fa;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* Sombra do texto para maior visibilidade */
+            font-weight: 300; /* Texto mais leve para melhor qualidade */
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+            text-rendering: optimizeLegibility;
         }
         .link_wrapper {
             display: inline-block;
@@ -41,6 +49,7 @@
             transition: background-color 0.3s, transform 0.3s;
             margin-top: 20px;
             border: none;
+            font-weight: 300; /* Texto mais leve */
         }
         .link_wrapper:hover {
             background-color: #e65100; /* Laranja mais escuro */
