--- a/nojo´s/src/main/webapp/index.html
+++ b/nojo´s/src/main/webapp/index.html
@@ -5,27 +5,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Criar Produto</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <style>
         body {
             background-color: #000000; /* Fundo preto */
             color: #f8f9fa; /* Texto claro */
-            font-family: Geneva, sans-serif; /* Fonte Geneva */
-            -webkit-font-smoothing: antialiased;
-            -moz-osx-font-smoothing: grayscale;
+            font-family: Arial, sans-serif; /* Fonte Arial */
             text-rendering: optimizeLegibility;
+        }
+        .navbar {
+            background-color: #212529; /* Fundo navbar */
+            border-bottom: 2px solid #ff6f00; /* Borda inferior laranja */
+        }
+        .navbar-brand {
+            color: #ff6f00;
+            font-weight: bold;
+            font-size: 1.5rem;
+        }
+        .nav-link {
+            color: #f8f9fa;
+            font-weight: 300;
+            margin-left: 20px; /* Ajusta o espaçamento à esquerda */
+            transition: color 0.3s;
+        }
+        .nav-link:hover {
+            color: #e65100;
+        }
+        .dropdown-menu {
+            background-color: #2c2c2c; /* Fundo do menu dropdown */
+        }
+        .dropdown-item {
+            color: #ff6f00;
+            transition: background-color 0.3s, color 0.3s;
+        }
+        .dropdown-item:hover {
+            background-color: #1c1c1c;
+            color: #ffa726;
         }
         .form-container {
             background-color: #212529; /* Fundo escuro para o formulário */
-            padding: 20px;
+            padding: 30px;
             border-radius: 10px;
-            margin-top: 50px;
+            margin-top: 20px;
             max-width: 500px;
             margin-left: auto;
             margin-right: auto;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5); /* Sombra para destacar o formulário */
         }
         .form-label {
             color: #f8f9fa; /* Cor das labels */
-            font-weight: 300; /* Texto mais leve para melhor qualidade */
+            font-weight: bold; /* Texto mais destacado */
         }
         .title {
             font-size: 3rem; /* Aumenta o tamanho da fonte do título */
@@ -33,10 +62,6 @@
             margin-top: 20px;
             color: #f8f9fa;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* Sombra do texto para maior visibilidade */
-            font-weight: 300; /* Texto mais leve para melhor qualidade */
-            -webkit-font-smoothing: antialiased;
-            -moz-osx-font-smoothing: grayscale;
-            text-rendering: optimizeLegibility;
         }
         .link_wrapper {
             display: inline-block;
@@ -49,7 +74,8 @@
             transition: background-color 0.3s, transform 0.3s;
             margin-top: 20px;
             border: none;
-            font-weight: 300; /* Texto mais leve */
+            font-weight: bold; /* Texto mais destacado */
+            font-size: 1.1rem; /* Aumenta o tamanho do texto */
         }
         .link_wrapper:hover {
             background-color: #e65100; /* Laranja mais escuro */
@@ -69,11 +95,71 @@
         .link_wrapper:hover .icon svg {
             transform: translateX(5px);
         }
+        .cart-icon {
+            margin-left: 10px; /* Reduz a distância do carrinho */
+            cursor: pointer;
+            color: #f8f9fa; /* Cor do ícone */
+            display: flex;
+            align-items: center;
+        }
+        .cart-icon i {
+            font-size: 1.5rem; /* Tamanho maior do ícone do carrinho */
+        }
+        .form-group input {
+            border: 1px solid #ff6f00; /* Borda laranja */
+            border-radius: 5px;
+            background-color: #2c2c2c; /* Fundo do input */
+            color: #f8f9fa; /* Texto claro no input */
+        }
+        .form-group input:focus {
+            border-color: #e65100; /* Borda laranja mais escura no foco */
+            background-color: #3c3c3c; /* Fundo mais claro no foco */
+            outline: none; /* Remove a borda padrão do foco */
+        }
     </style>
 </head>
 <body>
+
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg">
+    <a class="navbar-brand" href="#">Nojo's</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Início</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Login</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Marcas
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#">Adidas</a>
+                    <a class="dropdown-item" href="#">Anti Social Club</a>
+                    <a class="dropdown-item" href="#">Bape</a>
+                    <a class="dropdown-item" href="#">Jordan</a>
+                    <a class="dropdown-item" href="#">Nike</a>
+                    <a class="dropdown-item" href="#">Nike Nocta</a>
+                    <a class="dropdown-item" href="#">Off-White</a>
+                    <a class="dropdown-item" href="#">The North Face</a>
+                </div>
+            </li>
+            <li class="nav-item cart-icon">
+                <a class="nav-link" href="#">
+                    <i class="fas fa-shopping-cart"></i> <!-- Ícone de carrinho de compras -->
+                </a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
 <div class="container">
-    <h2 class="title">Criar Produto</h2> <!-- Título atualizado -->
+    <h2 class="title">Criar Produto</h2>
     <div class="form-container">
         <form action="/create-prod" method="post">
             <div class="form-group">
