--- a/nojo´s/src/main/webapp/index.html
+++ b/nojo´s/src/main/webapp/index.html
@@ -35,12 +35,12 @@
             background-color: #2c2c2c; /* Fundo do menu dropdown */
         }
         .dropdown-item {
-            color: #ff6f00;
+            color: #ffffff;
             transition: background-color 0.3s, color 0.3s;
         }
         .dropdown-item:hover {
             background-color: #1c1c1c;
-            color: #ffa726;
+            color: #ffffff;
         }
         .form-container {
             background-color: #212529; /* Fundo escuro para o formulário */
@@ -63,12 +63,13 @@
             color: #f8f9fa;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* Sombra do texto para maior visibilidade */
         }
-        .link_wrapper {
+        .link_wrapper,
+        .delete_wrapper {
             display: inline-block;
             position: relative;
             padding: 10px 20px;
             text-decoration: none;
-            color: #f8f9fa;
+            color: #ffffff; /* Texto branco */
             background-color: #ff6f00; /* Laranja */
             border-radius: 5px;
             transition: background-color 0.3s, transform 0.3s;
@@ -76,40 +77,24 @@
             border: none;
             font-weight: bold; /* Texto mais destacado */
             font-size: 1.1rem; /* Aumenta o tamanho do texto */
+            width: 100%; /* Ajusta a largura para 100% */
         }
         .link_wrapper:hover {
             background-color: #e65100; /* Laranja mais escuro */
             transform: scale(1.05);
         }
-        .icon {
-            display: inline-block;
-            margin-left: 10px;
-            vertical-align: middle;
+        .delete_wrapper {
+            background-color: #dc3545; /* Vermelho */
         }
-        .icon svg {
-            fill: #f8f9fa; /* Cor do ícone em branco */
-            width: 20px;
-            height: 20px;
-            transition: transform 0.3s;
-        }
-        .link_wrapper:hover .icon svg {
-            transform: translateX(5px);
-        }
-        .cart-icon {
-            margin-left: 10px; /* Reduz a distância do carrinho */
-            cursor: pointer;
-            color: #f8f9fa; /* Cor do ícone */
-            display: flex;
-            align-items: center;
-        }
-        .cart-icon i {
-            font-size: 1.5rem; /* Tamanho maior do ícone do carrinho */
+        .delete_wrapper:hover {
+            background-color: #c82333; /* Vermelho mais escuro */
+            transform: scale(1.05);
         }
         .form-group input {
             border: 1px solid #ff6f00; /* Borda laranja */
             border-radius: 5px;
             background-color: #2c2c2c; /* Fundo do input */
-            color: #f8f9fa; /* Texto claro no input */
+            color: #ffffff; /* Texto claro no input */
         }
         .form-group input:focus {
             border-color: #e65100; /* Borda laranja mais escura no foco */
@@ -161,7 +146,7 @@
 <div class="container">
     <h2 class="title">Criar Produto</h2>
     <div class="form-container">
-        <form action="/create-prod" method="post">
+        <form action="/create-prod" method="post" id="productForm">
             <div class="form-group">
                 <label for="prod-desc" class="form-label">Descrição do Produto:</label>
                 <input type="text" name="prod-desc" id="prod-desc" class="form-control" required>
@@ -172,22 +157,29 @@
             </div>
             <div class="form-group">
                 <label for="prod-valor" class="form-label">Valor R$:</label>
-                <input type="number" name="prod-valor" step="0.01" required id="prod-valor" class="form-control">
+                <input type="number" name="prod-valor" id="prod-valor" step="0.01" required class="form-control">
             </div>
-            <button type="submit" class="link_wrapper">
-                Registrar
-                <div class="icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 268.832 268.832">
-                        <path d="M265.17 125.577l-80-80c-4.88-4.88-12.796-4.88-17.677 0-4.882 4.882-4.882 12.796 0 17.678l58.66 58.66H12.5c-6.903 0-12.5 5.598-12.5 12.5 0 6.903 5.597 12.5 12.5 12.5h213.654l-58.66 58.662c-4.88 4.882-4.88 12.796 0 17.678 2.44 2.44 5.64 3.66 8.84 3.66s6.398-1.22 8.84-3.66l79.997-80c4.883-4.882 4.883-12.796 0-17.678z"/>
-                    </svg>
-                </div>
-            </button>
+            <button type="submit" class="link_wrapper">Registrar</button>
+        </form>
+    </div>
+</div>
+
+<!-- Formulário de Deleção -->
+<div class="container mt-5">
+    <h2 class="title">Deletar Produto</h2>
+    <div class="form-container">
+        <form action="/delete-prod" method="post" id="deleteForm">
+            <div class="form-group">
+                <label for="prod-id" class="form-label">ID do Produto a ser Deletado:</label>
+                <input type="text" name="prod-id" id="prod-id" class="form-control" required>
+            </div>
+            <button type="submit" class="delete_wrapper">Deletar</button>
         </form>
     </div>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
