--- a/nojo´s/src/main/webapp/index.html
+++ b/nojo´s/src/main/webapp/index.html
@@ -105,7 +105,7 @@
 </head>
 <body>
 
-<!-- Navbar -->
+
 <nav class="navbar navbar-expand-lg">
     <a class="navbar-brand" href="#">Nojo's</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -136,7 +136,7 @@
             </li>
             <li class="nav-item cart-icon">
                 <a class="nav-link" href="#">
-                    <i class="fas fa-shopping-cart"></i> <!-- Ícone de carrinho de compras -->
+                    <i class="fas fa-shopping-cart"></i>
                 </a>
             </li>
         </ul>
@@ -164,7 +164,7 @@
     </div>
 </div>
 
-<!-- Formulário de Deleção -->
+
 <div class="container mt-5">
     <h2 class="title">Deletar Produto</h2>
     <div class="form-container">
